Fix navbar sidebar flicker by adjusting transform/position logic

--- a/src/components/common/navbar/navbar.module.scss
+++ b/src/components/common/navbar/navbar.module.scss
@@ -80,12 +80,11 @@
             min-width: 280px;
             position: fixed;
             top: var(--navbar-height);
-            right: 0;
+            left: 100%;
             padding: 2rem 3rem;
             overflow: auto;
             height: calc(100vh - var(--navbar-height));
             border-left: 1px solid lightgray;
-            transform: translateX(100%);
             transition: transform 0.3s ease-in-out;
             z-index: var(--navigation-sidebar-index);
 
@@ -113,7 +112,7 @@
         }
 
         .activeRight {
-            transform: translateX(0);
+            transform: translateX(-100%);
         }
     }
 }
